[package]
name = "color-scheme"
version = "0.1.1"
edition = "2024"
description = "Simple color configuration for configuration files"
license = "MIT"
repository = "https://github.com/sofusa/color-scheme"

[dependencies]
clap = { version = "4", features = ["derive"] }
regex = "1"
walkdir = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
